[gd_scene load_steps=9 format=3 uid="uid://tcs04u0p3bxq"]

[ext_resource type="PackedScene" uid="uid://c7vxgcoa5jljn" path="res://Scenes/Uniques/Systems/SelectionMenu.tscn" id="1_bo2af"]
[ext_resource type="Script" uid="uid://dwxupfsl1atlv" path="res://Codes/Uniques/Systems/ProjectUI.gd" id="1_y01sf"]
[ext_resource type="PackedScene" uid="uid://tjkaqnudm23w" path="res://Scenes/Uniques/Systems/Path.tscn" id="3_fenws"]
[ext_resource type="PackedScene" uid="uid://jh840fnsvoqa" path="res://Scenes/Uniques/Systems/AddMenu.tscn" id="4_imaj3"]
[ext_resource type="Theme" uid="uid://d3mc6bsqrw6m6" path="res://RoundTheme.tres" id="5_bt24a"]
[ext_resource type="PackedScene" uid="uid://cksut3e7sa137" path="res://Scenes/Uniques/Systems/NodeMap.tscn" id="6_vro7u"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ge4fv"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="Theme" id="Theme_d4lo4"]
Panel/styles/panel = SubResource("StyleBoxFlat_ge4fv")

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_y01sf")

[node name="Window" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = SubResource("Theme_d4lo4")

[node name="SelectionMenu" parent="Window" instance=ExtResource("1_bo2af")]
layout_mode = 1
offset_top = 100.0

[node name="Path" parent="Window" instance=ExtResource("3_fenws")]
layout_mode = 1

[node name="WorkNodeMenu" parent="Window" instance=ExtResource("4_imaj3")]
visible = false
layout_mode = 1
anchor_top = 0.0
offset_top = 100.0

[node name="Settings" type="Control" parent="Window"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Menu" type="Control" parent="Window/Settings"]
layout_mode = 1
anchor_left = 0.2
anchor_top = 0.1
anchor_right = 0.8
anchor_bottom = 0.9
offset_top = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="Window/Settings/Menu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("5_bt24a")

[node name="NodeMap" type="Control" parent="Window"]
custom_minimum_size = Vector2(204, 120)
layout_mode = 1
anchor_left = 0.8
anchor_top = 0.8
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="Centerer" type="CenterContainer" parent="Window/NodeMap"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CircularMap" parent="Window/NodeMap/Centerer" instance=ExtResource("6_vro7u")]
layout_mode = 2
